package eapli.base.usermanagement.domain.repositories;

import eapli.base.clientusermanagement.domain.ClientUser;
import eapli.base.clientusermanagement.domain.MecanographicNumber;
import eapli.base.usermanagement.domain.Utilizador;
import eapli.framework.domain.repositories.DomainRepository;
import eapli.framework.infrastructure.authz.domain.model.Username;

import java.util.Optional;

/**
 *
 * @author Jorge Santos ajs@isep.ipp.pt 02/04/2016
 */
public interface UserRepository
        extends DomainRepository<MecanographicNumber, Utilizador> {

    /**
     * returns the client user (utente) whose username is given
     *
     * @param email
     *            the username to search for
     * @return
     */

    Optional<Utilizador> findByUsername(String email);

    /**
     * returns the client user (utente) with the given mecanographic number
     *
     * @param number
     * @return
     */
    default Optional<Utilizador> findByMecanographicNumber(MecanographicNumber number) {
        return ofIdentity(number);
    }

    public Iterable<Utilizador> findAllActive();
}
