@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class ConsultarTarefasUI <<presentation>>
class ConsultarTarefasController <<application>>
class PersistenceContext <<persistence>>
class RepositoryFactory <<factory>>
class ServicoRepository <<repository>>
class UserRepository <<repository>>


ConsultarTarefasUI --> ConsultarTarefasController
ConsultarTarefasUI : doShow()
ConsultarTarefasUI : listServicos()
ConsultarTarefasUI : listTarefas()

ConsultarTarefasController : repositories()
ConsultarTarefasController : findAll()
ConsultarTarefasController : tarefasPendentes(listServicos)

ConsultarTarefasController --> ServicoRepository
ConsultarTarefasController --> UserRepository
ConsultarTarefasController --> PersistenceContext
PersistenceContext --> RepositoryFactory

RepositoryFactory --> ServicoRepository
RepositoryFactory : create()

PersistenceContext : create()

@enduml